# fre

./: CMakeLists.txt  Makefile  README.md  install_real_dependencies.sh
config/: miner.conf
kernels/: advanced_mining_kernels.cu  elliptic_curve_kernels.cu  hash_kernels.cu
scripts/: build_release.sh  deploy_cluster.sh  optimized_setup.sh  setup_dependencies.sh
src/: main.cu
src/address/: address_factory.cu  address_factory.h  bech32.h
src/bloom/: bloom_kernels.cu  super_bloom_filter.cu  super_bloom_filter.h
src/config/: config_manager.cu  config_manager.h  miner.conf
src/core/: miner_engine.cu  miner_engine.h  mining_result.h  performance_optimizer.cu  performance_optimizer.h
src/crypto/: advanced_secp256k1.cu  advanced_secp256k1.h  ripemd160.h  sha256.cu  sha256.h
src/gpu/: device_properties.h  gpu_worker.cu  gpu_worker.h  load_balancer.cu  load_balancer.h  multi_gpu_manager.cu  multi_gpu_manager.h
src/monitoring/: health_monitor.cu  health_monitor.h  live_reporter.cu  live_reporter.h  statistics_manager.cu  statistics_manager.h
src/storage/: data_serializer.cu  data_serializer.h  result_manager.cu  result_manager.h
src/utils/: cuda_utils.h  device_properties.cu  device_properties.h  exception_handler.h  format_utils.h  logger.h  random.cu  random.h
tests/performance_tests/: benchmark.cu
tests/unit_tests/: test_crypto_validation.cpp  test_main.cpp
tools/: address_loader.py
